[metadata]
name = reaxpro-wrappers
author = Netherlands eScience Center, Fraunhofer IWM
url = https://www.esciencecenter.nl/
version = v1.3.0
description = The wrapper of AMS and Zacros drivers for SimPhoNy
keywords = simphony, cuds, AMS, zacros, SCM
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent


[options]
install_requires =
    wheel>=0.30.0
    tk==0.1.0
    plams==1.5.1
    rdflib==6.2.0
    osp-core>=3.8.0
    arcp>=0.2.1
    minio>=7.1.15
    pydantic<2.0.0
    ase>=3.22.1

[options.extras_require]
develop =
    pre-commit
    pycodestyle
    pylint
    pytest
    pytest-cov
    pytest-mock
    bumpver==2021.1114
    dunamai==1.7.0


[options.packages.find]
where = .

[options.package_data]
YML_PATH = 
    *.ttl
    *.yml
osp.dictionaries = 
    defaults/*.yaml
    energies/*.yaml
    ams/*
    example_data/*

[options.entry_points]
wrappers =
    wrapper = osp.wrappers.simams.simams_session:SimamsSession

[bumpver]
current_version = "v0.0.0"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
setup.cfg =
    version = {version}


[mypy]
ignore_missing_imports = True
files = osp, tests
allow_redefinition = True

# https://github.com/python/mypy/issues/10632#issuecomment-863332698
[mypy-yaml.*]
ignore_missing_imports = True

[coverage:run]
branch = True
source = osp

[tool:pytest]
testpaths = tests
addopts = --cov --cov-report xml --cov-report term --cov-report html
norecursedirs=tests/helpers
